--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ reqwest = { version = "0.11.14", default-features = false, features = ["rustls-t
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 simplelog = "0.12.0"
-tokio = { version = "1.25.0", features = ["full"] }
+tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }
 
 [profile.release]
 strip = true
