--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,10 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Setup Toolchain
-        uses: dtolnay/rust-toolchain@stable
+        uses: actions/checkout@v4
 
       - name: Setup Cache
         uses: Swatinem/rust-cache@v2
@@ -21,17 +18,23 @@ jobs:
       - name: Build
         run: cargo build --release
 
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: listmonk-sync
+          path: target/release/listmonk-sync
+
   code-style:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Setup Toolchain
-        uses: dtolnay/rust-toolchain@stable
+        uses: actions/checkout@v4
 
       - name: Setup Cache
         uses: Swatinem/rust-cache@v2
 
-      - name: Check Code Style
+      - name: Check rustfmt
+        run: cargo fmt --all -- --check
+
+      - name: Check Clippy
         run: cargo clippy -- -D warnings
